apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_arg_name_mismatch.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_arg_name_mismatch.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` with `@connect(entity: true)` has invalid arguments. Argument `id` does not have a matching field `id` on type `Product`.",
        locations: [
            LineColumn {
                line: 13,
                column: 9,
            }..LineColumn {
                line: 13,
                column: 16,
            },
            LineColumn {
                line: 18,
                column: 9,
            }..LineColumn {
                line: 18,
                column: 21,
            },
        ],
    },
]
