apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_arg_name_mismatch_composite_key.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_arg_name_mismatch_composite_key.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` with `@connect(entity: true)` has invalid arguments. Field `id` on `CountryInput` does not exist on `Country`.",
        locations: [
            LineColumn {
                line: 49,
                column: 5,
            }..LineColumn {
                line: 49,
                column: 12,
            },
            LineColumn {
                line: 19,
                column: 9,
            }..LineColumn {
                line: 19,
                column: 21,
            },
        ],
    },
]
