apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_arg_not_object_type.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_arg_not_object_type.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`Query.product` with `@connect(entity: true)` has invalid arguments. Mismatched type on field `id` - expected `ID` but found `ProductInput`.",
        locations: [
            13:9..13:26,
            18:9..18:21,
        ],
    },
]
