apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_field_args_missing.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_field_args_missing.graphql
---
[
    Message {
        code: EntityResolverArgumentMismatch,
        message: "`@connect(entity: true)` on `Query.product` is missing entity resolver arguments.",
        locations: [
            LineColumn {
                line: 16,
                column: 9,
            }..LineColumn {
                line: 16,
                column: 21,
            },
        ],
    },
]
