apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_on_list_type.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_on_list_type.graphql
---
[
    Message {
        code: EntityTypeInvalid,
        message: "`@connect(entity: true)` on `Query.users` is invalid. Entities can only be non-list, nullable, object types.",
        locations: [
            LineColumn {
                line: 8,
                column: 7,
            }..LineColumn {
                line: 8,
                column: 19,
            },
        ],
    },
]
