apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_on_non_entity_field.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_on_non_entity_field.graphql
---
[
    Message {
        code: EntityTypeInvalid,
        message: "`@connect(entity: true)` on `Query.name` is invalid. Entities can only be non-list, object types.",
        locations: [
            LineColumn {
                line: 8,
                column: 7,
            }..LineColumn {
                line: 8,
                column: 19,
            },
        ],
    },
]
