apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_entity_arg_on_non_null_type.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_entity_arg_on_non_null_type.graphql
---
[
    Message {
        code: EntityTypeInvalid,
        message: "`@connect(entity: true)` on `Query.user` is invalid. Entity connectors must return non-list, nullable, object types.",
        locations: [
            8:7..8:19,
        ],
    },
]
