apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_namespace_in_header_variables.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_namespace_in_header_variables.graphql
---
[
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)` Unknown variable",
        locations: [
            11:49..11:57,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@source(http.headers:)`: variable `$this` is not valid at this location, must be one of $config, $context",
        locations: [
            12:62..12:67,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar` Unknown variable",
        locations: [
            24:51..24:59,
        ],
    },
    Message {
        code: InvalidHeader,
        message: "In `@connect(http.headers:)` on `Query.scalar`: variable `$status` is not valid at this location, must be one of $args, $config, $context, $this",
        locations: [
            25:64..25:71,
        ],
    },
]
