apollo-federation/src/sources/connect/validation/snapshots/validation_tests@invalid_nested_paths_in_json_selection.graphql.snap
---
source: apollo-federation/src/sources/connect/validation/mod.rs
expression: "format!(\"{:#?}\", errors)"
input_file: apollo-federation/src/sources/connect/validation/test_data/invalid_nested_paths_in_json_selection.graphql
---
[
    Message {
        code: UndefinedField,
        message: "In `@connect(http: {body:})` on `Query.scalar`: `String` does not have a field named `blah`.",
        locations: [
            12:34..12:38,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http: {body:})` on `Query.object`: `InputObject` does not have a field named `fieldThatDoesntExist`.",
        locations: [
            20:33..20:53,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http: {body:})` on `Query.enum`: `Enum` does not have a field named `cantHaveFields`.",
        locations: [
            28:30..28:44,
        ],
    },
    Message {
        code: UndefinedField,
        message: "In `@connect(http: {body:})` on `Object.newField`: `Object` does not have a field named `fieldThatDoesntExist`",
        locations: [
            40:27..40:47,
        ],
    },
]
